fix table clipping

--- a/static/css/packages.css
+++ b/static/css/packages.css
@@ -163,7 +163,6 @@ body {
 
 #main-list {
     width: 100%;
-    overflow-x: clip;
 }
 
 #main-list table {
